--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html >
+<head>
+  <meta charset="UTF-8">
+  <title>Resume Processor</title>
+  <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+  
+</head>
 
+<body style="background: #000;">
+    <div class="login">
+      <h1>Resume Processor</h1>
+      <form action = "http://localhost:5000/process" method = "POST" enctype = "multipart/form-data">
+        <input type="text" name = "ID">
+        <input type = "file" name = "file" />
+        <input type = "submit"/>
+        {{text}}
+      </form>   
+      <br>
+    </div>
+</body>
+</html>
